--- a/styles.css
+++ b/styles.css
@@ -179,6 +179,9 @@ button {
   width: 100%;
   position: fixed;
   top: 0;
+  /* display: flex;
+  align-items: center ;
+  justify-content: center; */
 }
 
 @media only screen and (max-width: 700px) {
