--- a/styles.css
+++ b/styles.css
@@ -141,17 +141,22 @@ button {
   cursor: pointer;
 }
 
-#histories {
+/* #histories {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+} */
+#histories{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px
 }
-
 .card {
   width: 100%;
   height: 100%;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 20px 30px;
