--- a/styles.css
+++ b/styles.css
@@ -154,11 +154,11 @@ button {
 .card {
   width: 100%;
   height: 100%;
-  padding: 50px;
+  /* padding: 50px; */
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  /* justify-content: space-between;
+  align-items: center; */
   padding: 20px 30px;
   color: white;
   border-radius: 15px;
@@ -170,6 +170,9 @@ button {
   );
   backdrop-filter: blur(5px);
   margin-bottom: 30px;
+}
+.card h3, p{
+margin-bottom: 10px;
 }
 
 #modal-background {
